2005-09-28  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c backend/snapscan-scsi.c
	  backend/snapscan.c backend/snapscan.h:
	  Added 16 bit option for Epson scanners, untested

2005-09-28  Julien Blache <jb@jblache.org>
	* tools/udev/convert-usermap.sh: Don't print 0x when matching VID
	and PID.

2005-09-28  Julien Blache <jb@jblache.org>
	* tools/udev/convert-usermap.sh: Added script to convert
	hotplug/libsane.usermap to a udev rules file. udev 070 + linux
	2.6.14 will deprecate hotplug.
	* tools/README: updated.

2005-09-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/brother.desc: Removed duplicate entry.
	* doc/descriptions/genesys.desc: Added link to genesys homepage.

2005-09-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-find-scanner.c: Print more clear output if no USB
	  scanners are found. Point to manual page. Warn if libusb support
	  hasn't been built.

2005-09-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/lexmark.desc
	  doc/descriptions/unsupported.desc: Added external lexmark
	  backend. Moved Lexmark X11?? devices to lexmark.desc. Based on
	  patch from  Fred Odendaal <freshshelf@rogers.com>.

2005-09-25  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c: Removed debugging code for 
	  Epson scanners until a working solution has been found.               

2005-09-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README: Mention in addition to the listed libraries, their
	  header files are also neccessary. A missing usb.h is a common
	  problem when building SANE (--> no USB support).
	* configure configure.in: Added warning message that's printed
	  when libusb or its header file is not available.
	* frontend/scanimage.c doc/scanimage.man: Added progress indicator
	  to scanimage (based on patch from Mario Goppold 
	  <mgoppold@tbz-pariv.de>). Updated copyright information, added